--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,9 @@ header{
     justify-content: space-between;
     align-items: center;
     padding: 10px 15px;
+    width: 90%;
+    max-width: 1152px;
+    margin: auto;
    
 
 }
@@ -34,6 +37,11 @@ header{
     color: #0084FD;
     margin-bottom: 20px;
 }
+.col-md-8{
+    display: flex;
+    flex-direction: column;
+    
+}
 .app_store{
     background-color: #0084FD;
     padding: 10px;
@@ -51,7 +59,8 @@ header{
 .phone{
     max-height:287px ;
     max-width: 258px;
-    margin-bottom: -19px;
+    margin-bottom: -15px;
+   
 }
 
 
@@ -74,6 +83,7 @@ header{
 .ta-left{
     text-align: left;
 }
+
 /*utility*/
 /*btn*/
 .nav_lg .btn_white{
@@ -90,10 +100,12 @@ header{
 @media screen and (min-width:768px){
     /*uti*/
     .col-md-8{
-        width: calc(99% / 12 * 8);
+        width: calc(100% / 12 * 8 - 1%) ;
+       
     }
     .col-md-4{
-        width: calc(95% / 12 * 4);
+        width: calc(100% / 12 * 4 - 2%);
+
     }
     /*uti*/
     .blue{
@@ -102,7 +114,7 @@ header{
         justify-content: space-between;
     }
     .col-md-4 p{
-        line-height: 2;
+        line-height:1.6;
     }
 }
 /*md*/
@@ -117,19 +129,18 @@ a{
 
 @media screen and (min-width:1024px) {
 
-    .nav{
-        width: 92%;
-        margin: auto;
-    }
+    
     .d-lg-none{
         display: none;
     }
     .d-lg-block{
         display: block
     }
+    
     .col-md-8{
-        display: flex;
+        flex-direction: row;
     }
+    
     
 }
 /*lg*/
