--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ header{
     max-height:287px ;
     max-width: 258px;
     margin-bottom: -15px;
-   
+    
 }
 
 
@@ -100,11 +100,12 @@ header{
 @media screen and (min-width:768px){
     /*uti*/
     .col-md-8{
-        width: calc(100% / 12 * 8 - 1%) ;
-       
+        width: calc(100% / 12 * 8 - 20px) ;
+        margin:0 10px;
     }
     .col-md-4{
-        width: calc(100% / 12 * 4 - 2%);
+        width: calc(100% / 12 * 4 - 20px);
+        margin:0 10px;
 
     }
     /*uti*/
@@ -141,6 +142,8 @@ a{
         flex-direction: row;
     }
     
-    
+    .phone{
+        align-self: flex-end;
+    }
 }
 /*lg*/
