--- a/css/style.css
+++ b/css/style.css
@@ -12,10 +12,11 @@ header {
     background-color: #0084FD;
 }
 
-a{
+a {
     text-decoration: none;
     color: white;
 }
+
 .nav {
     justify-content: space-between;
     align-items: center;
@@ -45,7 +46,8 @@ a{
     color: #0084FD;
     margin-bottom: 20px;
 }
-.blue p{
+
+.blue p {
     font-weight: 700;
 }
 
@@ -103,19 +105,23 @@ a{
 .col-lg-6 {
     padding: 15px;
 }
+
 /*testimonials*/
-.testimonials h2{
+.testimonials h2 {
     font-size: 20px;
     padding: 15px;
 }
-.testimonials h1{
-    color:#9792E4 ;
+
+.testimonials h1 {
+    color: #9792E4;
     padding: 15px;
 }
-.testimonials p{
+
+.testimonials p {
     line-height: 1.6;
 }
-.testimonial{
+
+.testimonial {
     width: 60%;
     aspect-ratio: 1;
     border-radius: 50%;
@@ -126,7 +132,7 @@ a{
 }
 
 
-.testimonials .col-12{
+.testimonials .col-12 {
     background-color: #9792E4;
     padding: 15px;
     border-radius: 20px;
@@ -134,17 +140,63 @@ a{
     display: flex;
     flex-direction: column;
 }
-.testimonials .col-12 p{
+
+.testimonials .col-12 p {
     color: white;
     margin: 30px 0;
 
 }
-.testimonials .col-12 h2{
+
+.testimonials .col-12 h2 {
     color: white;
 }
 
 /*testimonials*/
 
+/*benefits*/
+.benefits {
+    background-color: #9792E4;
+    margin-top: 30px;
+    padding-top: 20px;
+}
+
+.benefits_text {
+    color: white;
+    font-size: 20px;
+}
+.benefits_cards{
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 30px;
+}
+.benefits_cards .col-12 {
+    background-color: white;
+    padding: 15px;
+    border-radius: 20px;
+    margin-top: 30px;
+}
+
+.benefits_cards h1 {
+    color: #9792E4;
+    font-size: 50px;
+    margin: 20px 0;
+}
+
+.benefits_cards h2 {
+    color: #9792E4;
+    margin: 20px 0;
+}
+
+.benefits_cards p {
+    color: #5B6F80;
+    line-height: 1.6;
+}
+
+.more {
+    margin: 30px 0;
+}
+
+/*benefits*/
 
 
 /*utility*/
@@ -195,6 +247,13 @@ a{
 
 }
 
+.btn_more {
+    background-color: #9792E4;
+    padding: 10px 40px;
+    border-radius: 20px;
+
+}
+
 /*btn*/
 
 
@@ -205,6 +264,10 @@ a{
     /*uti*/
     .col-md-8 {
         width: calc(100% / 12 * 8 - 20px);
+        margin: 0 10px;
+    }
+    .col-md-6 {
+        width: calc(100% / 12 * 6 - 20px);
         margin: 0 10px;
     }
 
@@ -224,17 +287,28 @@ a{
     .col-md-4 p {
         line-height: 1.6;
     }
-    .planning1 h2{
+
+    .planning1 h2 {
         font-size: 50px;
     }
+
     /*testimonials*/
-    .testimonials .col-12{
+    .testimonials .col-12 {
         flex-direction: row;
     }
-    .testimonials_text{
+
+    .testimonials_text {
         align-self: center;
     }
+
     /*testimonials*/
+    /*benefits*/
+    .benefits_cards{
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+    /*benefits*/
+
 
 }
 
@@ -270,6 +344,11 @@ a{
     .col-lg-6 {
         width: calc(100% / 12 * 6);
     }
+    .col-lg-4 {
+        width: calc(100% / 12 * 4 - 20px);
+        margin: 0 10px;
+
+    }
 
     .purple .container {
         display: flex;
@@ -281,7 +360,7 @@ a{
         font-size: 30px;
     }
 
-    
+
     .planning2 {
         align-self: self-end;
     }
