--- a/css/style.css
+++ b/css/style.css
@@ -198,6 +198,20 @@ a {
 
 /*benefits*/
 
+/*about*/
+.about_text h2{
+    font-size: 40px;
+    margin: 30px 0;
+    color: #9792E4;
+}
+.about_text p{
+    line-height: 1.6;
+    
+
+}
+/*about*/
+
+
 
 /*utility*/
 .white {
